--- a/src/app/pages/weapon-stats-page/weapon-stats-page.scss
+++ b/src/app/pages/weapon-stats-page/weapon-stats-page.scss
@@ -3,16 +3,16 @@
     grid-template-columns: 1fr 1fr 1fr;
 
     .left {
-        background-color: #222831;
+        // background-color: #222831;
     }
 
     .middle {
-        background-color: #393E46;
+        // background-color: #393E46;
         margin-left: auto;
         margin-right: auto;
     }
 
     .right {
-        background-color: #948979;
+        // background-color: #948979;
     }
 }
